# new-year-2026-challenge

./: README.md  main.py
.github/: pull_request_template.md
arkemis-money-challenge/arkemis-money/: FORENSICS_REPORT.md  README.md  SECURITY_AUDIT.md  pyproject.toml
arkemis-money-challenge/arkemis-money/docs/: PROOF.md  ROADMAP.md
arkemis-money-challenge/arkemis-money/examples/: challenge_solution.py  ifx_governance_demo.py
arkemis-money-challenge/arkemis-money/src/money/: __init__.py  core.py  ifx.py
arkemis-money-challenge/arkemis-money/tests/: __init__.py  test_ifx.py  test_money.py
